@@ -50,6 +50,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 8567) Added hook RawPageViewBeforeOutput just before the text is blown out in action=raw,
              so extensions might influence the output.
 * Correct tooltip accesskey hint for Opera on the Macintosh (it uses Shift-Esc-, not Ctrl-).
+* (bug 3446) Add user preference to hide page content below diffs, can be overridden by adding
+             diffonly=1 or diffonly=0 to the URL of the diff page
 
 == Languages updated ==
 
